syntax = "proto3";

option csharp_namespace = "EventApi.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package event;

service EventProto {
	rpc GetAllEvents (google.protobuf.Empty) returns (GetAllEventsReply);
    rpc GetEventById (GetEventByIdRequest) returns (GetEventByIdReply);
    rpc CreateEvent (Event) returns (EventReply);
    rpc UpdateEvent (Event) returns (EventReply);
    rpc DeleteEvent (GetEventByIdRequest) returns (EventReply);
    rpc GetEventsByCategory (CategoryIdRequest) returns (GetAllEventsReply);
    rpc GetEventsByLocation (LocationIdRequest) returns (GetAllEventsReply);
    rpc GetEventsByStatus (StatusIdRequest) returns (GetAllEventsReply);
}


message Event {
	string EventId = 1;
    string EventTitle = 2;
    string Description = 3;
    google.protobuf.Timestamp Date = 4;
    double Price = 5;
    int32 Quantity = 6;
    int32 SoldQuantity = 7;
    Category Category = 8;
    Location Location = 9;
    Status Status = 10;
}

message GetAllEventsReply {
	repeated Event Events = 1;
}

message Category {
    string CategoryId = 1;
    string CategoryName = 2;
}
message Location {
    string LocationId = 1;
    string Address = 3;
    string City = 4;
}

message Status {
    string StatusId = 1;
    string StatusName = 2;
}

message GetEventByIdRequest {
    string EventId = 1;
}
message GetEventByIdReply {
    int32 StatusCode = 1;
    Event Event = 2;
}

message EventReply{
    int32 StatusCode = 1;
    string Message = 2;
}
message CategoryIdRequest {
    string CategoryId = 1;
}
message LocationIdRequest {
    string LocationId = 1;
}
message StatusIdRequest {
    string StatusId = 1;
}
